<resources>
    <string name="app_name">EcoJardimProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout_settings">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_cliente">Cliente</string>
    <string name="menu_projeto">Projeto</string>
    <string name="menu_orcamentos">Orçamentos</string>
    <string name="menu_servicos">Serviços</string>
    <string name="login_title">Login</string>

    <string name="ecojardim_title">EcoJardimPro</string>
    <string name="ecojardim_subTitle">Software de Gestão para JardineiroPaisagista</string>
    <string name="action_entrar">Entrar</string>
    <string name="action_cadastrar">Cadastre-se</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="foto_description">"Logo do Aplicativo EcoJardim"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cadastro">Cadastro EcoJardimPro</string>
    <string name="btn_cadastro">Cadastrar</string>
    <string name="title_nome">Nome:</string>
    <string name="title_sobrenome">Sobrenome:</string>
    <string name="title_documento">CPF/CNPJ:</string>
    <string name="conteudo_nome">Nome</string>
    <string name="conteudo_sobrenome">Sobrenome</string>
    <string name="conteudo_documento">Documento</string>
    <string name="add_list">Adicionar</string>
    <string name="title_listagem_cliente">Clientes</string>
    <string name="subtitle_lista_clientes">Listagem de Clientes</string>
    <string name="title_listagem_projeto">Projetos</string>
    <string name="subtitle_lista_projeto">Listagem de Projetos</string>
    <string name="title_listagem_orcamentos">Orçamentos</string>
    <string name="subtitle_lista_orcamentos">Listagem de Orcamentos</string>
    <string name="cadastro_fragment">Cadastro</string>
    <string name="form_cliente">Formulário de Cliente</string>
    <string name="title_dados_cliente">Informações do Cliente</string>
    <string name="title_dados_projeto">Informações do Projeto</string>
    <string name="title_dados_servico">Informações do Serviço</string>
    <string name="title_dados_orcamento">Informações do Orçamento</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_sobrenome">Sobrenome</string>
    <string name="hint_documento">Documento</string>
    <string name="title_informacoes_endereco">Informações de Endereço</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_logradouro">Logradouro</string>
    <string name="hint_numero">Numero</string>
    <string name="hint_complemento">Complemento</string>
    <string name="hint_bairro">Bairro</string>
    <string name="hint_municipio">Municipio</string>
    <string name="title_informacoes_contato">Informações de Contato</string>
    <string name="hint_nome_contato">Nome do Contato</string>
    <string name="hint_email">Email</string>
    <string name="hint_celular">Celular</string>
    <string name="hint_telefone">Telefone Fixo</string>
    <string name="btn_proximo">Proximo</string>
    <string name="btn_voltar">Voltar</string>
    <string name="btn_salvar">Criar Cliente</string>
    <string name="title_nome_projeto">Nome do Projeto:</string>
    <string name="title_data">Data Inicial:</string>
    <string name="title_data_final">Data Final(Estimativa):</string>
    <string name="title_status">Status:</string>
    <string name="conteudo_nome_projeto">Nome do Projeto</string>
    <string name="conteudo_nome_orcamento">Nome do Orçamento</string>
    <string name="conteudo_nome_servico">Nome do Serviço</string>
    <string name="conteudo_descricao_orcamento">Descrição do Orçamento</string>
    <string name="conteudo_data_inicial">Data Inicial</string>
    <string name="conteudo_data_final">Data Final</string>
    <string name="conteudo_status">Status</string>
    <string name="auto_complete_clientes">Clientes</string>
    <string name="hint_nome_projeto">Nome do Projeto</string>
    <string name="hint_descricao">Descrição</string>
    <string name="hint_data_inicial">Data Inicial</string>
    <string name="hint_data_final">Data Final</string>
    <string name="hint_valor_estimado">Valor Estimado (R$) </string>
    <string name="adicionar_projeto">Adicionar Projeto</string>
    <string name="adicionar_orcamento">Adicionar Orçamento</string>
    <string name="Adicionar" />
    <string name="title_nome_orcamento">Nome do Orçamento:</string>
    <string name="title_descricao">Descrição:</string>
    <string name="title_nome_servico">Serviço:</string>
    <string name="title_list_nome_projeto">Nome do Projeto:</string>
    <string name="hint_projeto_orcamento">Nome do Projeto</string>
    <string name="title_valor">Valor:</string>
    <string name="title_valor_servico">Valor do Serviço</string>
    <string name="hint_orcamento_nome">Nome do Orçamento</string>
    <string name="hint_nome_servico">Nome do Serviço</string>
    <string name="hint_descricao_servico">Descrição</string>
    <string name="hint_data_inicio">Data de Inicio</string>
    <string name="hint_data_finalizacao">Data de Finalização</string>
    <string name="hint_valor_servico">Valor do Serviço</string>
    <string name="botao_adicionar_servico">Adicionar Serviço</string>
    <string name="title_lista_servicos">Serviços</string>
    <string name="subtitle_servicos">Listagens de Serviços</string>
    <string name="label_formulario">Formulário de Projeto</string>
    <string name="label_formulario_orcamento">Formulario de Orçamento</string>
    <string name="label_formulario_servicos">Formulário de Serviços</string>
</resources>