<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_cliente" />
        <item
            android:id="@+id/nav_projeto"
            android:icon="@drawable/baseline_work_24"
            android:title="@string/menu_projeto" />
        <item
            android:id="@+id/nav_orcamentos"
            android:icon="@drawable/baseline_align_vertical_bottom_24"
            android:title="@string/menu_orcamentos" />
        <item
            android:id="@+id/nav_servicos"
            android:icon="@drawable/baseline_assignment_24"
            android:title="@string/menu_servicos" />

    </group>
</menu>