<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/input_adicionar_projeto"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="39dp"
        android:text="@string/add_list"
        app:layout_constraintBottom_toTopOf="@+id/list_nome_projeto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/list_nome_projeto"
        android:layout_width="142dp"
        android:layout_height="30dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_nome_projeto"
        android:textColor="@color/green_eco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/item_nome_projeto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_nome_projeto"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif"
        android:hint="@string/conteudo_nome_projeto"
        android:textColor="@color/green_eco"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/list_data_inicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_nome_projeto" />

    <TextView
        android:id="@+id/list_data_inicial"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:text="@string/title_data"
        android:textColor="@color/green_eco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/list_data_final"
        app:layout_constraintEnd_toStartOf="@+id/item_data_inicial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_nome_projeto" />

    <TextView
        android:id="@+id/item_data_inicial"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif"
        android:hint="@string/conteudo_data_inicial"
        android:textColor="@color/green_eco"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/item_data_final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/list_data_inicial"
        app:layout_constraintTop_toBottomOf="@+id/item_nome_projeto"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/list_data_final"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:text="@string/title_data_final"
        android:textColor="@color/green_eco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/list_status"
        app:layout_constraintEnd_toStartOf="@+id/item_data_final"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_data_inicial" />

    <TextView
        android:id="@+id/item_data_final"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif"
        android:hint="@string/conteudo_data_final"
        android:textColor="@color/green_eco"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/item_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/list_data_final"
        app:layout_constraintTop_toBottomOf="@+id/item_data_inicial" />

    <TextView
        android:id="@+id/list_status"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:text="@string/title_status"
        android:textColor="@color/green_eco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_data_final" />

    <TextView
        android:id="@+id/item_status"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif"
        android:hint="@string/conteudo_status"
        android:textColor="@color/green_eco"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/list_status"
        app:layout_constraintTop_toBottomOf="@+id/item_data_final" />


</androidx.constraintlayout.widget.ConstraintLayout>
