<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pedroza.infnet.ecojardimproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cliente"
        android:name="com.pedroza.infnet.ecojardimproject.ui.cliente.ClienteFragment"
        android:label="@string/menu_cliente"
        tools:layout="@layout/fragment_cliente" />

    <fragment
        android:id="@+id/nav_projeto"
        android:name="com.pedroza.infnet.ecojardimproject.ui.projeto.ProjetoFragment"
        android:label="@string/menu_projeto"
        tools:layout="@layout/fragment_projeto" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.pedroza.infnet.ecojardimproject.ui.login.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_loginFragment_to_cadastroFragment"
            app:destination="@id/cadastroFragment" />
    </fragment>
    <fragment
        android:id="@+id/cadastroFragment"
        android:name="com.pedroza.infnet.ecojardimproject.ui.login.ui.login.CadastroFragment"
        android:label="fragment_cadastro"
        tools:layout="@layout/fragment_cadastro" >
        <action
            android:id="@+id/action_cadastroFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_orcamentos"
        android:name="com.pedroza.infnet.ecojardimproject.ui.orcamentos.OrcamentosFragment"
        android:label="fragment_orcamentos"
        tools:layout="@layout/fragment_orcamentos" />
    <fragment
        android:id="@+id/nav_servicos"
        android:name="com.pedroza.infnet.ecojardimproject.ui.servicos.ServicosFragment"
        android:label="fragment_servicos"
        tools:layout="@layout/fragment_servicos" />
</navigation>